--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         <p id="developer" onclick="redirectToGitHub()">Developed by Ghanshyamsinh Zala</p>
     </div>
     <div class="button-container">
-        <button class="button type1" onclick="location.href='https://example.com/link1'">
+        <button class="button type1" onclick="location.href='https://gz30eee.github.io/Memory-Card-Game/Memory%20Cards%20Game%20[Demo%202]/index.html'">
             <span class="btn-txt">Timely Mode</span>
         </button>
-        <button class="button type1" onclick="location.href='https://example.com/link2'">
+        <button class="button type1" onclick="location.href='https://gz30eee.github.io/Memory-Card-Game/Memory%20Cards%20Game%20[Demo%201]/index.html'">
             <span class="btn-txt">Chill Mode</span>
         </button>
     </div>
@@ -139,7 +139,7 @@
         }
 
         function redirectToGitHub() {
-            window.open('https://github.com/yourusername', '_blank');
+            window.open('https://linktr.ee/ghza3006', '_blank');
         }
     </script>
 </body>
